<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_image"
                android:clipToOutline="true"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/family_photo"/>

            <TextView
                style="@style/TextContent.Small.White"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_rounded"
                android:drawableStart="@drawable/ic_launcher_foreground"
                android:gravity="center_vertical"
                android:drawablePadding="1dp"
                android:padding="10dp"
                android:text="@string/dummy_likes"
                android:textSize="16sp" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:src="@drawable/photo_profile" />

            <TextView
                style="@style/TextContent.Username"
                android:layout_toEndOf="@+id/profile_image"
                android:textStyle="bold"
                android:text="@string/username" />

            <TextView
                style="@style/TextContent.Location"
                android:text="@string/location"
                android:layout_toEndOf="@+id/profile_image"/>

        </RelativeLayout>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="16dp"
            android:text="@string/date" />

        <TextView
            style="@style/TextContent.Description"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text" />

        <TextView
            style="@style/TextContent.CommentTitle"
            android:layout_marginBottom="8dp"
            android:text="@string/content_comment_title" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/content_comment_user1" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_comment_1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/content_comment_user2" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_comment_2" />
            </TableRow>


        </TableLayout>


        <Button
            style="@style/ButtonGeneral"
            android:text="@string/button_comment"/>

    </LinearLayout>

</ScrollView>